Add clock_in_history endpoint to SleepRecordsController
